Migrate binding-codegen test to NIO2
This also performs major clean ups:
- eliminate duplication in YangModuleInfoCompilationTest
- migrate callers of assertTrue()

Change-Id: I8b02dff19eede2a6db1db150708eb11842d78f47
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>